--- a/makerspace-frontend/package.json
+++ b/makerspace-frontend/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "sass": "^1.45.0",
+    "sass-loader": "^10.2.0",
     "vue": "^2.6.11",
     "vuedraggable": "^2.24.3"
   },
